gccida/c3/dw2_asm_output_offset
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dw2_asm_output_offset/src/dwarf2asm.c:598:35: error: use of undeclared identifier 'machine_mode'
v4 = gen_rtx_fmt_s( SYMBOL_REF, ( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), label); 
                                  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/dw2_asm_output_offset/src/obj/dwarf2asm.o] Error 1
